--- a/daml.yaml
+++ b/daml.yaml
@@ -3,10 +3,16 @@
 
 sdk-version: 2.4.0
 name: module7
-source: daml
-init-script: Main:setup
+source: daml/src
+init-script: Setup:init
 version: 0.0.1
 dependencies:
   - daml-prim
   - daml-stdlib
   - daml-script
+# parties:
+#   - alice
+#   - bob
+#   - cindy
+#   - savid
+#   - eson
